--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,11 @@ h1 {
     font-size: 5rem;
     font-family: var(--fonte-titulo);
     color: var(--cor-branca);
+    text-align: center;
 }
 
 p {
-    font-size: 1rem;
+    font-size: 1rem;    
     margin-bottom: 2rem;
     color: var(--cor-branca);
     font-family: var(--fonte-texto);
