Resolvendo erros de responsividade

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,15 @@ h1 {
     color: var(--cor-branca);
 }
 
+header{
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+    z-index: 1000; 
+}
+.bem_vindo{
+    margin-top: 100px;
+}
 p {
     font-size: 1rem;
     margin-bottom: 2rem;
