--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ header {
 figcaption{
     color: #fff;
 }
+.cell h1{
+    margin-top: 100px;
+}
 h1 {
     margin-top: 2rem;
     font-size: 5rem;
